--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>rocksdbjni</artifactId>
 			<version>${rocksdb.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
